--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ slogan: "Fresh Sounds"
 
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
-description: "»Feeling Responsive« is a responsive theme for Jekyll based on the fabulous foundation framework with beautiful typography and a bright color palette."
+description: "»Sam Harrison is a UK based Songwriter/Performer, lead singer of the 'Society of Strange Living'. Devoted to making great new music."
 
 # Main author of the website
 # See > authors.yml
