--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ description: "»Sam Harrison is a UK based Songwriter/Performer, lead singer of 
 
 # Main author of the website
 # See > authors.yml
-author: phlow
+author: samofthex
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
