--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ urlimg: 'https://samofthex.github.io/sam-harrison-music/images/'
 
 
 # Logo size is 600x80 pixels
-logo: "logo.png"
+logo: "newlogo1.png"
 
 
 #       ____              _             __  _
