--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -55,7 +55,7 @@
   side: left
   dropdown:
   - title: "Society of Strange Living"
-    url: "https://samofthex.github.io/sam-harrison-music/societyofstrangeliving/"
+    url: "https://samofthex.github.io/sam-harrison-music/societyofstrangeliving.md/"
   - title: "Roadmap"
     url: "/roadmap/"
 
