--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -56,8 +56,8 @@
   dropdown:
   - title: "Society of Strange Living"
     url: "/society-of-strange-living/"
-  - title: "Roadmap"
-    url: "/roadmap/"
+  - title: "Gigs"
+    url: "/gigs/"
 
 - title: Blog
   url: "http://samharrisonlives.blogspot.co.uk/"
