added sam lander

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -28,8 +28,8 @@
     url: "/design/video/"
   - title: "Gallery"
     url: "/design/gallery/"
-  - title: "Portfolio"
-    url: "/design/portfolio/"
+  - title: "Landing Page"
+    url: "/samlander/"
 
 - title: "Cool Stuff"
   url: "/headers/"
