--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,7 +15,7 @@
   - title: "Videos"
     url: "/design/video/"
   - title: "Gallery"
-    url: "/pages/gallery/"
+    url: "/pages/Gallery/"
   - title: "Landing Page"
     url: "/samlander/"
 
