Videos page made

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@
   - title: "Music"
     url: "/pages/music/"
   - title: "Videos"
-    url: "/design/video/"
+    url: "/pages/videos/"
   - title: "Gallery"
     url: "/pages/Gallery/"
   - title: "Landing Page"
