--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author: samofthex
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'http://samharrisonmusic.com/'
+url: 'http://samharrisonmusic.com'
 baseurl: ''
 
 # This is for the editing function in _/includes/improve_content
