--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -20,7 +20,7 @@
     url: "/samlander/"
 
 - title: "Discography"
-  url: "/discog/"
+  url: "pages/discog/index.md"
   side: left
   
   #dropdown:
